Searching for an app results in a never-ending spinner
A bit ago I realised that I needed to install Builder. First I searched "builder" in the shell, which didn't give me any results from Software. Then I opened Software itself and searched for "builder" there. I was then presented with a spinner which hasn't stopped spinning for nearly an hour.
I've got a trace here. Apparently it's waiting for the gnome-nightly flatpak repo?