gs-search-page: Provide partial search results as soon as known

As soon as any plugin returns new search results show them in the search
page, instead of waiting until all the plugins finish the search.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1243